--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@capacitor/status-bar": "1.0.8",
     "@ionic/angular": "^6.0.0",
     "@ionic/storage-angular": "^3.0.6",
+    "ngforage": "^7.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "uuid": "^8.3.2",
